--- a/rootdir/etc/init.hawaii_ss_vivalto_base.rc
+++ b/rootdir/etc/init.hawaii_ss_vivalto_base.rc
@@ -213,8 +213,8 @@ on fs
 # Support Preload install apks
     mkdir /preload 0771 system system
 
-    mount_all /fstab.hawaii_ss_vivaltods5m
-    #swapon_all /fstab.hawaii_ss_vivaltods5m
+    mount_all /fstab.hawaii_ss_vivalto
+    #swapon_all /fstab.hawaii_ss_vivalto
 
 # Temporary hack for root access
 #    chown root root /system/xbin/su
